force-app/main/default/objects/OneCRM__Suggestion_Log__c/OneCRM__Suggestion_Log__c.object-meta.xml
<CustomObject>
    <label>Suggestion Log</label>
    <nameField>
        <label>Suggestion Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suggestion Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>