force-app/main/default/objects/OneCRM__Suggestion_Log__c/fields/OneCRM__Suggestions__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Suggestions__c</fullName>
    <label>Suggestions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>