force-app/main/default/objects/OneCRM__Suggestion_Log__c/fields/OneCRM__Type_Id__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Type_Id__c</fullName>
    <externalId>true</externalId>
    <label>Type Id</label>
    <length>35</length>
    <required>true</required>
    <type>Text</type>
</CustomField>